--- a/references.bib
+++ b/references.bib
@@ -33,6 +33,17 @@ author = "A. Payne and K. Walsh and P. Subedi and D. Jarvis",
 keywords = "Applied image colour segmentation, Processing, Fruit, Automated counting, Texture segmentation"
 }
 
+@article{article_Payne,
+author = {Payne, Alison and Walsh, Kerry and Subedi, Phul and Jarvis, Dennis},
+year = {2013},
+month = {02},
+pages = {57–64},
+title = {Estimation of mango crop yield using image analysis – Segmentation method},
+volume = {91},
+journal = {Computers and Electronics in Agriculture},
+doi = {10.1016/j.compag.2012.11.009}
+}
+
 
 @misc{stein2016improving,
   title={Improving Image Based Fruitcount Estimates Using Multiple View-Points},
@@ -165,8 +176,14 @@ address = "UK United Kingdom",
 
 @online{views_forecasts,
   title = {{Views and forecasts about robotics for the ag industry},
-  howpublished = {\url{https://robohub.org/views-and-forecasts-about-robotics-for-the-ag-industry/}}
+  howpublished ={\url{https://robohub.org/views-and-forecasts-about-robotics-for-the-ag-industry/}}
 }}
+
+@online{mango_harvesting_in,
+  title = {{Mango Harvesting},
+  howpublished ={\url{http://nhb.gov.in/pdf/fruits/mango/man004.pdf/}}
+}}
+
 
 @article{article_Barnes,
     author = {Barnes, Michael and Duckett, Tom and Cielniak, Grzegorz and Stroud, Graeme and Harper, Glyn},
@@ -177,5 +194,14 @@ address = "UK United Kingdom",
     volume = {98},
     journal = {Journal of Food Engineering},
     doi = {10.1016/j.jfoodeng.2010.01.010}
+}
+
+@article{article_Tabb,
+author = {Tabb, Amy and Peterson, Donald and Park, Johnny},
+year = {2006},
+month = {01},
+pages = {},
+title = {Segmentation of Apple Fruit from Video via Background Modeling},
+doi = {10.13031/2013.20873}
 }
 
