--- a/title/title.tex
+++ b/title/title.tex
@@ -1,31 +1,30 @@
 \begin{titlepage}
 \newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
-\includegraphics[width=8cm]{title/University_of_Bristol_logo.png}\\
-[1cm] 
+\includegraphics[width=8cm]{University_of_Bristol_logo.png}\\[1cm] 
 \center 
 \quad\\[1.5cm]
-\textsl{\Large Robotics Research Preparation}\\[0.5cm] 
-\textsl{\large Coursework II}\\[0.5cm] 
+\textsl{\Large The University of Sydney}\\[0.5cm] 
+\textsl{\large School of Chemical and Biomolecular Engineering}\\[0.5cm] 
 \makeatletter
 \HRule \\[0.4cm]
 { \huge \bfseries \@title}\\[0.4cm] 
 \HRule \\[1.5cm]
 \begin{minipage}{0.4\textwidth}
 \begin{flushleft} \large
-\emph{Presented by:}\\
+\emph{Author:}\\
 \@author 
 \end{flushleft}
 \end{minipage}
-~
+
 \begin{minipage}{0.4\textwidth}
 \begin{flushright} \large
 \emph{Supervisor:} \\
-\textup{Dr Mark Hansen}
+\textup{Specify Your Supervisor}
 \end{flushright}
 \end{minipage}\\[3cm]
 \makeatother
-{\large An Assignment submitted for the UoS:}\\[0.5cm]
-{\large \emph{AENGM0029: Robotics Research Preparation}}\\[0.5cm]
+{\large An Assignment submitted for the UoB:}\\[0.5cm]
+{\large \emph{Place Your Course Code and Course Name at Here}}\\[0.5cm]
 {\large \today}\\[2cm] 
 \vfill 
 \end{titlepage}
