--- a/Ripeness Analysis/Ripeness Analysis.ipynb
+++ b/Ripeness Analysis/Ripeness Analysis.ipynb
@@ -501,10 +501,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-2-2eab15cbcecd>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-2eab15cbcecd>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    ..l;\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "..l;"
+   ]
   },
   {
    "cell_type": "code",
@@ -522,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,6 +545,7 @@
     "    norm = colors.Normalize(vmin=-1.,vmax=1.)\n",
     "    norm.autoscale(pixel_colors)\n",
     "    pixel_colors = norm(pixel_colors).tolist()\n",
+    "\n",
     "    \n",
     "    return pixel_colors\n",
     "    "
@@ -858,7 +870,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
